# ResearchAgentSystem

./: .gitignore  README.md  config.py  graph.py  main.py  pyproject.toml  requirements.txt  state.py  utils.py  使用说明.md
.github/workflows/: release.yml
agents/: critic.py  extractor.py  orchestrator.py  searcher.py  writer.py
memory/: long_term.py  short_term.py
tools/: calculator.py  rag_retrieve.py  web_search.py
