[project]
name = "research-agent-system"
version = "1.0.0"
description = "基于 LangGraph 的多智能体协作研究助手"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Research Agent Team" }
]
keywords = ["langgraph", "multi-agent", "research", "llm", "rag"]

dependencies = [
    "langchain>=1.3",
    "langchain-openai>=1.3",
    "langgraph>=1.2",
    "chromadb>=1.5",
    "sentence-transformers>=5.6",
    "ddgs>=9.14",
    "certifi>=2024",
]

[tool.uv]
package = false
